added image, search box, button

--- a/ts_google_index.html
+++ b/ts_google_index.html
@@ -2,9 +2,16 @@
 <html>
   <head>
     <link rel="stylesheet" type="text/css" href="ts_stylesheet.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <title>Google</title>
   </head>
-
   <body>
+    <div>
+      <span class=''>Gmail</span>
+      <span class=''>Images</span>
+    <div>
+    <img src='logo.jpg' id="logo" class='center' />
+    <input type="text" class='center' id='search'>
+    <input type="button" class='center'>
   </body>
-
 </html>
