--- a/ts_google_index.html
+++ b/ts_google_index.html
@@ -11,7 +11,8 @@
       <span class=''>Images</span>
     <div>
     <img src='logo.jpg' id="logo" class='center' />
-    <input type="text" class='center' id='search'>
-    <input type="button" class='center'>
+    <input type="text" class='center' id='search' placeholder='Search Google or type a URL'>
+    <input type="button" class='center' id='add' value='+'>
+    <!--<span class='center'>Add shortcut</span>-->
   </body>
 </html>
