--- a/ts_google_index.html
+++ b/ts_google_index.html
@@ -3,14 +3,18 @@
   <head>
     <link rel="stylesheet" type="text/css" href="ts_stylesheet.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <title>Google</title>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
+    <title>New Tab</title>
   </head>
   <body>
-    <div>
+    <div id='topbar'>
       <span class=''>Gmail</span>
       <span class=''>Images</span>
-    <div>
+        <i class="fas fa-bell" ></i>
+        <i class="fab fa-buromobelexperte"></i>
+    </div>
     <img src='logo.jpg' id="logo" class='center' />
+
     <input type="text" class='center' id='search' placeholder='Search Google or type a URL'>
     <input type="button" class='center' id='add' value='+'>
     <!--<span class='center'>Add shortcut</span>-->
