center buttons and right align top content

--- a/ts_google_index.html
+++ b/ts_google_index.html
@@ -1,22 +1,31 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" type="text/css" href="ts_stylesheet.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="ts_stylesheet.css">
     <title>New Tab</title>
   </head>
   <body>
-    <div id='topbar'>
-      <span class=''>Gmail</span>
-      <span class=''>Images</span>
-        <i class="fas fa-bell" ></i>
-        <i class="fab fa-buromobelexperte"></i>
-    </div>
+
     <img src='logo.jpg' id="logo" class='center' />
 
     <input type="text" class='center' id='search' placeholder='Search Google or type a URL'>
-    <input type="button" class='center' id='add' value='+'>
+
+    <button class='center' id='add_button'>
+      <input type="button" class='center' id='add' value='+'>
+      <span id='shortcut' class='center'>Add a shortcut<span>
+    </button>
     <!--<span class='center'>Add shortcut</span>-->
+    <div id='topbar'>
+      <!--ul is an unordered list (basically a bulleted list) and li is a "list item" within it-->
+      <ul>
+        <li>Gmail</li>
+        <li>Images</li>
+        <li><i class="fab fa-buromobelexperte"></i></li>
+        <li><i class="fas fa-bell" ></i></li>
+      </ul>
+    </div>
+    <i class="fas fa-cog" id='settings'></i>
   </body>
 </html>
